# sympt

./: .gitignore  404.html  CITATION.cff  LICENSE  README.md  __init__.py  index.html  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml  tests.yml
PySW/: __init__.py  classes.py  solver.py  utils.py
PySW/.ipynb_checkpoints/: solver-checkpoint.py  utils-checkpoint.py
SymPT/: classes.py  solver.py  utils.py
about/: index.html
classes/Developers/Blocks/: index.html
classes/Developers/Expression/: index.html
classes/Developers/MulGroup/: index.html
classes/Developers/RDCompositeBasis/: index.html
classes/Users/Block/: index.html
classes/Users/EffectiveFrame/: index.html
classes/Users/RDBasis/: index.html
classes/Users/RDOperator/: index.html
classes/Users/RDSymbol/: index.html
common_footer/: index.html
css/: custom.css
examples/: C1_Quantum_rabi_model.ipynb  C1_Quantum_rabi_model.md  C2_Quantum_rabi_TD.ipynb  C3_EDSR.ipynb  C3_Quantum_rabi_TD.ipynb  C4_EDSR Crosstalk.ipynb  C4_EDSR copy.ipynb  C4_EDSR.ipynb  C4_ParametricLightInteraction.ipynb  C5_EDSR Crosstalk.ipynb  C5_ParametricLightInteraction.ipynb  C6_EDSR Crosstalk.ipynb  F1_Anderson_impurity_model.ipynb  F1_Stochastic_Matrix_ACE.ipynb  F1_Stochastic_Matrix_ACE_SymPT.ipynb  F2_Stochastic_Matrix.ipynb  F2_Stochastic_Matrix_ACE.ipynb  F2_Stochastic_Matrix_ACE_Blocks.ipynb  F2_Stochastic_Matrix_ACE_vs_LA.ipynb  F2_Stochastic_Matrix_LA.ipynb  FX_Stochastic_matrix.ipynb  I1_Transmon_resonator.ipynb  I2_HO_with_quartic_perturbation.ipynb  RandomMatrix_DiVincenzo_test.ipynb
examples/C1_Quantum_rabi_model/: index.html
examples/C2_Quantum_rabi_TD/: index.html
examples/C3_EDSR/: index.html
examples/C4_ParametricLightInteraction/: index.html
examples/C5_EDSR Crosstalk/: index.html
examples/F1_Stochastic_Matrix_ACE_SymPT/: index.html
examples/F2_Stochastic_Matrix_ACE_Blocks/: index.html
examples/I1_Transmon_resonator/: index.html
examples/I2_HO_with_quartic_perturbation/: index.html
functions/Developers/apply_commutation_relations/: index.html
functions/Developers/count_bosons/: index.html
functions/Developers/domain_expansion/: index.html
functions/Developers/get_order_group_by_order/: index.html
functions/Developers/get_perturbative_expression/: index.html
functions/Developers/separate_diagonal_off_diagonal/: index.html
functions/Users/display_dict/: index.html
functions/Users/get_block_mask/: index.html
functions/Users/group_by_operators/: index.html
js/: custom.js
pysw/: __init__.py  classes.py  solver.py
sympt/: __init__.py  classes.py  logging_config.py  solver.py  utils.py
tests/: test_classes.py
